unpackaged/main/default/objects/Review__c/fields/Client_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Feedback</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Feedback &amp; Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>