unpackaged/main/default/objects/Review__c/fields/Date_of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Review</label>
    <type>Date</type>
</CustomField>