unpackaged/main/default/objects/Review__c/fields/Insider_Comments__c.field-meta.xml
<CustomField>
    <fullName>Insider_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insider Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>