unpackaged/main/default/objects/Review__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Feedback</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Review Service</fullName>
            </value>
            <value>
                <fullName>Insider Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>