unpackaged/main/default/objects/Review__c/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>eg. Zagat, Trip Advisor, Insider experience.</inlineHelpText>
    <label>Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>