unpackaged/main/default/objects/Review__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>